# SDL2-Cpp-Game

./: .gitignore  README.md
fly-bird/: CMakeLists.txt  main.c
fly-bird/.history/: CMakeLists_20240102222332.txt  CMakeLists_20240102223109.txt  CMakeLists_20240102223554.txt  CMakeLists_20240102224518.txt  CMakeLists_20240102232603.txt  CMakeLists_20240102232751.txt  CMakeLists_20240102232800.txt  CMakeLists_20240102232848.txt  CMakeLists_20240102233502.txt  CMakeLists_20240102233625.txt  CMakeLists_20240103000104.txt  CMakeLists_20240103155115.txt  CMakeLists_20240103155144.txt  CMakeLists_20240103155236.txt  CMakeLists_20240103160601.txt  CMakeLists_20240103160619.txt  CMakeLists_20240104005238.txt  CMakeLists_20240104005244.txt
fly-bird/.history/include/: common_20240104124251.h  common_20240104124334.h  common_20240104124345.h  common_20240104142617.h  common_20240104144408.h  common_20240104145220.h  common_20240104145225.h  common_20240104154405.h  common_20240104154416.h  common_20240104154527.h  common_20240104154823.h  common_20240104155235.h  common_20240104155333.h  common_20240104163233.h  common_20240104163332.h  common_20240104163430.h  common_20240104165455.h  common_20240104165716.h  main_20240102010422.h  main_20240103213606.h  main_20240103213626.h  main_20240103213634.h  main_20240103213812.h  main_20240103215303.h  main_20240103220121.h  main_20240103220125.h  main_20240103220156.h  main_20240104001348.h  main_20240104002443.h  (+11 more)
fly-bird/include/: common.h  main.h  menu.h
fly-bird/src/: CMakeLists.txt  common.cpp  main.c  main.cpp  menu.cpp
(+227 files in other folders)
